--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,7 @@ jobs:
             sudo apt-get update
             sudo apt install python3-pip
             sudo pip3 install awsebcli --upgrade
-      - run: cd npm start && npm install && npm run build
+      - run: npm start && npm install && npm run build
       - persist_to_workspace:
           root: .
           paths:
