--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,7 @@ jobs:
             sudo apt-get update
             sudo apt install python3-pip
             sudo pip3 install awsebcli --upgrade
-      - run: npm start && npm install && npm run build
+      - run: node server.js
       - persist_to_workspace:
           root: .
           paths:
@@ -24,7 +24,7 @@ jobs:
       - attach_workspace:
           at: .
       - checkout
-      - run:  npm start
+      - run:  node server.js
       - persist_to_workspace:
           root: .
           paths:
